--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://pertamaham:RAZZORBACK%40123@cluster0.wdv5v.mongodb.net/firstAid?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://pertamaham:RAZZORBACK@cluster0.wdv5v.mongodb.net/firstAid?retryWrites=true&w=majority&appName=Cluster0"
